trabajando en actualizaciones

--- a/acerca-de/index.html
+++ b/acerca-de/index.html
@@ -10,23 +10,23 @@
 <meta property="og:locale" content="es" />
 <meta name="description" content="Este blog sirve como registro de mis proyectos y videos." />
 <meta property="og:description" content="Este blog sirve como registro de mis proyectos y videos." />
-<link rel="canonical" href="https://esbendev.com/blog/acerca-de/" />
-<meta property="og:url" content="https://esbendev.com/blog/acerca-de/" />
+<link rel="canonical" href="https://esbendev.com/blob//acerca-de/" />
+<meta property="og:url" content="https://esbendev.com/blob//acerca-de/" />
 <meta property="og:site_name" content="esbendev - Blog" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Acerca de" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"Este blog sirve como registro de mis proyectos y videos.","headline":"Acerca de","url":"https://esbendev.com/blog/acerca-de/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"Este blog sirve como registro de mis proyectos y videos.","headline":"Acerca de","url":"https://esbendev.com/blob//acerca-de/"}</script>
 <!-- End Jekyll SEO tag -->
 
-  <link rel="stylesheet" href="/blog/assets/dist-style.css">
+  <link rel="stylesheet" href="/assets/dist-style.css">
 </head>
 <body class="container mx-auto px-4 md:px-16 tracking-wide bg-slate-50 dark:bg-slate-800 dark:text-white">
     <nav class="py-4">
   <div class="container mx-auto flex justify-between items-center">
-    <div class="text-xl md:text-2xl font-semibold "><a href="https://esbendev.com">esbendev - Blog</a></div>
-    <div class="my-auto hidden md:flex items-center space-x-4"><a class="hover:scale-105 duration-300 page-link " href="/blog/acerca-de/">Acerca de</a><div class="hover:scale-105 duration-300">
+    <div class="text-xl md:text-2xl font-semibold "><a href="https://esbendev.com/blob/">esbendev - Blog</a></div>
+    <div class="my-auto hidden md:flex items-center space-x-4"><a class="hover:scale-105 duration-300 page-link font-bold" href="/acerca-de/">Acerca de</a><div class="hover:scale-105 duration-300">
         <button id="darkModeToggle" class="p-2 rounded-lg">
           <svg id="sun-icon" class="w-6 h-6 text-yellow-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <!-- SVG code for a sun icon (light mode) -->
@@ -86,7 +86,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
         </svg>
       </button>
-      <div id="mobile-menu" class="hidden absolute top-16 right-4 bg-white dark:bg-slate-500 p-4 rounded shadow-md"><a class="block text-black-700 font-semibold p-2" href="/blog/acerca-de/">Acerca de</a></div>
+      <div id="mobile-menu" class="hidden absolute top-16 right-4 bg-white dark:bg-slate-500 p-4 rounded shadow-md"><a class="block text-black-700 font-semibold p-2" href="/acerca-de/">Acerca de</a></div>
     </div>
   </div>
 </nav>
