--- a/acerca-de/index.html
+++ b/acerca-de/index.html
@@ -9,16 +9,16 @@
 <meta property="og:locale" content="es" />
 <meta name="description" content="Este blog sirve como registro de mis proyectos y videos." />
 <meta property="og:description" content="Este blog sirve como registro de mis proyectos y videos." />
-<link rel="canonical" href="http://localhost:4000/blog/acerca-de/" />
-<meta property="og:url" content="http://localhost:4000/blog/acerca-de/" />
+<link rel="canonical" href="https://esbendev.com/blog/acerca-de/" />
+<meta property="og:url" content="https://esbendev.com/blog/acerca-de/" />
 <meta property="og:site_name" content="esbendev - Blog" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Acerca de" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"Este blog sirve como registro de mis proyectos y videos.","headline":"Acerca de","url":"http://localhost:4000/blog/acerca-de/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"Este blog sirve como registro de mis proyectos y videos.","headline":"Acerca de","url":"https://esbendev.com/blog/acerca-de/"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/blog/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/blog/feed.xml" title="esbendev - Blog" /></head>
+<link rel="stylesheet" href="/blog/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://esbendev.com/blog/feed.xml" title="esbendev - Blog" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/blog/">esbendev - Blog</a><nav class="site-nav">
